It does not matter how slowly you go as long as you do not stop.
-- Confucius

First they ignore you, then they laugh at you, then they fight you,
then you win. –- Mahatma Gandhi

Thu, Jul 30, 2009
---------------------------------------------------------------------
- Fixed ActionMailer password reset issue (thanks, James!).
- Use truncate() instead of shorten() for multibyte chars (thanks, Dima!).
- Increased the size of the textarea when adding notes (LH #80).

Wed, Jul 29, 2009
---------------------------------------------------------------------
- More work on building the Admin infrastructure.

Tue, Jul 28, 2009
---------------------------------------------------------------------
- Building Admin infrastructure.

Mon, Jul 27, 2009
---------------------------------------------------------------------
- Dropped open_id related tables, added [admin] flag to [users] table.

Sun, Jul 26, 2009
---------------------------------------------------------------------
- Added timezone support.

Fri, Jul 24, 2009
---------------------------------------------------------------------
- Fixed a typo that affected individual permissions (thanks, Guillermo!)
- Refactored password reset controller and related views.
- Merged in Spanish translation from chillicoder/master (thanks, Martin!).
- Release 0.9.5.

Thu, Jul 23, 2009
---------------------------------------------------------------------
- Made UUID support optional (affects MySQL v5+ users only).
- Removed task-specific flash area; changed to use generic flash messages instead.
- Store current user in the class to make it easier to access it from observers.
- Removed password length restriction to allow blank passwords.

Tue, Jul 21, 2009
---------------------------------------------------------------------
- Upgraded HAML/SASS to version 2.2.2 (Powerful Penny) and made it a plugin.
- Ruby 1.9.1 compatibility fixes.

Mon, Jul 20, 2009
---------------------------------------------------------------------