@@ -17,6 +17,6 @@
     - unless @current_user.preference[:accounts_outline] == "brief"
       %dt
         = link_to(account.website, account.website) << " | " if account.website?
-        = "phone: " << (account.tall_free_phone || account.phone) << " | " if account.tall_free_phone? || account.phone?
+        = "phone: " << (account.toll_free_phone || account.phone) << " | " if account.toll_free_phone? || account.phone?
         = pluralize(account.contacts.count, "contact") << " | "
         = pluralize(account.opportunities.count, "opportunity")
