@@ -11,8 +11,8 @@
           = f.text_field :website, :style => "width:240px"
         %td= spacer
         %td{ :valign => :top }
-          .label.top Phone (tall-free):
-          = f.text_field :tall_free_phone, :style => "width:240px"
+          .label.top Phone (toll-free):
+          = f.text_field :toll_free_phone, :style => "width:240px"
       %tr
         %td{ :valign => :top }
           .label Phone:
