@@ -4,8 +4,8 @@
     %div
       %b= link_to(truncate(@account.website, :length => 30), @account.website, :popup => true, :title => "Open #{@account.website} in a new window")
   %div
-    - if @account.tall_free_phone
-      == Tall free: <b>#{@account.tall_free_phone}</b><br />
+    - if @account.toll_free_phone
+      == Toll free: <b>#{@account.toll_free_phone}</b><br />
 
     - if @account.phone
       == Phone: <b>#{@account.phone}</b><br />
