@@ -54,7 +54,7 @@ Factory.define :account do |a|
   a.name                { Faker::Company.name }
   a.access              "Public"
   a.website             { Factory.next(:website) }
-  a.tall_free_phone     { Faker::PhoneNumber.phone_number }
+  a.toll_free_phone     { Faker::PhoneNumber.phone_number }
   a.phone               { Faker::PhoneNumber.phone_number }
   a.fax                 { Faker::PhoneNumber.phone_number }
   a.billing_address     { Factory.next(:address) }
