@@ -10,7 +10,7 @@
 #  name             :string(64)      default(""), not null
 #  access           :string(8)       default("Private")
 #  website          :string(64)
-#  tall_free_phone  :string(32)
+#  toll_free_phone  :string(32)
 #  phone            :string(32)
 #  fax              :string(32)
 #  billing_address  :string(255)
