@@ -4,6 +4,10 @@ It does not matter how slowly you go as long as you do not stop.
 First they ignore you, then they laugh at you, then they fight you,
 then you win. –- Mahatma Gandhi
 
+Fir, Jul 31, 2009
+---------------------------------------------------------------------
+- Added [suspended_at] to User model, fixed typo (LH #81).
+
 Thu, Jul 30, 2009
 ---------------------------------------------------------------------
 - Fixed ActionMailer password reset issue (thanks, James!).
